# SDL_course

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/scripts/: Level1.lua
src/: animation.hpp  assetmanager.cpp  assetmanager.hpp  collision.cpp  collision.hpp  component.hpp  constants.hpp  entity.cpp  entity.hpp  entitymanager.cpp  entitymanager.hpp  fontmanager.cpp  fontnanager.cpp  fontnanager.hpp  game.cpp  game.hpp  graphicshdr.hpp  main.cpp  main_game.cpp  map.cpp  map.hpp  texturemanager.cpp  texturemanager.hpp
src/components/: colliderComponent.hpp  keyboardcontrol.hpp  projectileemiterComponent.hpp  spritecomponent.hpp  textlabelComponent.hpp  tilecomponent.hpp  transformComponent.hpp
